# yfukai-pypitemplate

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cookiecutter.json  noxfile.py
.github/: dependabot.yml
.github/workflows/: constraints.txt  docs.yml  labeler.yml  pre-commit.yml  python-version-check.yml  release-drafter.yml  tests.yml
docs/: changes.md  conf.py  contributing.md  guide.md  index.md  quickstart.md  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py  statistics_norway_departments.csv
tools/: dependencies-table.py  github_app_auth.py  prepare-github-release.py  publish-github-release.py  update-python-versions.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  noxfile.py  pyproject.toml  sonar-project.properties  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  docs.yml  labeler.yml  python-version-check.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.md  reference.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py  functions.py
{{cookiecutter.project_name}}/tests/: test_functions.py  test_main.py
